--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Custom .gitignore for Python projects
+barbershop_details.json
+config.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
