Crawl For Treatments: Getting treatments of barbershop in this business using crawling with Beautiful Soup.

--- a/config.example.json
+++ b/config.example.json
@@ -1,3 +1,4 @@
 {
-    "location_url": "https://www.example.com/locations"
+    "location_url": "https://www.example.com/locations",
+    "treatments_url": "https://www.example.com/treatments"
 }
